gccida/c0/immed_real_const
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/immed_real_const/src/varasm.c:2731:12: error: expected expression
*( _OWORD *)d.r = *( _OWORD *)&exp->block.vars; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/immed_real_const/src/varasm.c:2731:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)d.r = *( _OWORD *)&exp->block.vars; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/immed_real_const/src/varasm.c:2735:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( exp->common.type->block.abstract_origin)) >> 1)); 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/immed_real_const/src/obj/varasm.o] Error 1
